# awesome

./: .gitignore  Justfile  LICENSE  Makefile  README.md  chrome.sh
docker/aider/: .gitignore  Dockerfile  Justfile  Makefile  READEME.md  build-app.sh  compose.override.yml  compose.yml  setup.sh
docker/aider-composer/: .dockerignore  .gitignore  Dockerfile  Makefile  compose.override.yml  compose.yml
docker/anythingllm/: Makefile  compose.override.yml  compose.yml
docker/bolt.diy/: Makefile  README.md  compose.override.yml  compose.yaml  models.patch
docker/browser-use/: Justfile  README.md
docker/cline/: .dockerignore  Dockerfile  Justfile  Makefile  src.patch
docker/continue/: .dockerignore  Dockerfile  Justfile  Makefile  build.sh
docker/danswer/: Makefile  README.md  compose.override.yml  compose.yml
docker/docker/: Justfile
docker/docsgpt/: Makefile  compose.override.yml  compose.yml
docker/gateway/: .gitignore  Dockerfile  Makefile  compose.override.yml  compose.yml  entrypoint.sh
docker/goose/: Dockerfile  Justfile  compose.yml
docker/gpt-researcher/: .gitignore  Dockerfile.cli  Justfile  Makefile  README.md  app.py  app.sh  cli.sh  compose.yml  (+13 more)
docker/mcp-servers/mcp-server-gptr/: . pylintrc  Dockerfile  Justfile  README.md  pyproject.toml
docker/mcp-servers/mcp-server-gptr/src/mcp_server_gptr/: server.py
docker/mcp-servers/mcp-server-gptr/src/mcp_server_gptr/backend/: detailed_report.py
docker/mcp-servers/mcp-server-seek/: Dockerfile  README.md  pyproject.toml
docker/mcp-servers/mcp-server-seek/src/mcp_server_seek/: server.py
(+138 files in other folders)
