[project]
name = "mcp-server-gptr"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "dotenv>=0.9.9",
 "gpt-researcher>=0.12.8",
 "mcp>=1.3.0",
]
[[project.authors]]
name = "Qiang Li"
email = "liqiang@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.uv.sources]
gpt-researcher = { git = "https://github.com/assafelovic/gpt-researcher.git", tag = "v3.2.3" }

[project.scripts]
mcp-server-gptr = "mcp_server_gptr:main"
