[project]
name = "mcp-server-seek"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.3.0",]
[[project.authors]]
name = "Qiang Li"
email = "liqiang@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-seek = "mcp_server_seek:main"
